# omega

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
res/glsl/: image.glsl  imagev.glsl  text.glsl  textv.glsl
res/img/: mario.xcf
src/: app.rs  app_gl.rs  main.rs  util.rs
src/core/: entity.rs  event.rs  image.rs  mod.rs  resource.rs
src/core/audio/: sound.rs
src/core/component/: audio_clip.rs  component.rs  image.rs  mod.rs  offset.rs  pre_frame.rs  render_offset.rs  screen_clear.rs  text.rs
src/core/entity/: animated_image.rs  entity.rs  mod.rs
src/core/renderer/: app_gl.rs  mod.rs  renderer.rs  window.rs
src/game/: mod.rs  state.rs
src/game/entities/: button.rs  mod.rs  title.rs
src/game/entity/: button.rs
src/game/scene/: entry.rs  mod.rs  testbed.rs  title.rs
src/util/: alpha.rs  color.rs  mod.rs  rect.rs  scale.rs  timer.rs
